--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
                 </div>
                 <div class="col-lg-6 text">
                     <h2>Our Features</h2>
-                    <p>Feature one</p>
-                    <p>Feature two</p>
-                    <p>Feature three</p>
+                    <p>FAST</p>
+                    <p>COMFORT</p>
+                    <p>SAFETY</p>
                 </div>
                 
             </div>
