--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
                 <a class="nav-link" href="models.html">Models</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contacts.html">Contacts</a>
+                <a class="nav-link" href="contacts.html">Log in</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html">About Us</a>
+                <a class="nav-link" href="about.html">Sign up</a>
               </li>    
             </ul>
           </div>  
