--- a/about.html
+++ b/about.html
@@ -44,11 +44,25 @@
                     <img src="banner2.jpeg" style="width: 100%; height: 500px;">
                 </div>
                 <div class="col-lg-6" style="margin-top: 20px;">
-                    <h2>About Us</h2>
-                    <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
-                    <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
-                    <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
-                    <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
+                    <form action="/action_page.php">
+                      <div class="form-group">
+                        <label for="text">Your Name:</label>
+                        <input type="text" class="form-control" placeholder="Enter Your Name" id="text">
+                      </div>
+                        <div class="form-group">
+                        <label for="email">Email address:</label>
+                        <input type="email" class="form-control" placeholder="Enter email" id="email">
+                      </div>
+                      <div class="form-group">
+                        <label for="pwd">Password:</label>
+                        <input type="password" class="form-control" placeholder="Enter password" id="pwd">
+                      </div>
+                        <div class="form-group">
+                        <label for="pwd">Retype Password:</label>
+                        <input type="password" class="form-control" placeholder="Enter password again" id="pwd">
+                      </div>
+                      <button type="submit" class="btn btn-primary">Sign Up</button>
+                    </form>
                 </div>
             </div>
         </div>
